24.0.0/Solution Exports/OpenShift/mailserver.yaml
kind: Service
apiVersion: v1
metadata:
  name: mailserver
  labels:
    app: mailserver
spec:
  selector:
    app: mailserver
  ports:
    - name: smtp
      port: 25
      targetPort: smtp
    - name: smtp-secure
      port: 465
      targetPort: smtp-secure
    - name: smtp-auth
      port: 587
      targetPort: smtp-auth
    - name: imap
      port: 143
      targetPort: imap
    - name: imap-secure
      port: 993
      targetPort: imap-secure

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailserver
  template:
    metadata:
      labels:
        app: mailserver
        role: mail
        tier: backend
    spec:
      containers:
        - name: docker-mailserver
          image: "quay.io/zhongtao/swat-jam/docker-mailserver:11.1.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              # If Fail2Ban is not enabled, you can remove NET_ADMIN.
              # If you are running on CRI-O, you will need the SYS_CHROOT capability,
              # as it is no longer a default capability.
              add: ["SYS_PTRACE", "SYS_CHROOT" ]
          readinessProbe:
            tcpSocket:
              port: 25
            initialDelaySeconds: 45
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: 25
            initialDelaySeconds: 45
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10            
          volumeMounts:
            - name: config
              subPath: postfix-accounts.cf
              mountPath: /tmp/docker-mailserver/postfix-accounts.cf
              readOnly: true
            - name: config
              subPath: postfix-virtual.cf
              mountPath: /tmp/docker-mailserver/postfix-virtual.cf
              readOnly: true
            - name: config
              subPath: postfix-main.cf            
              mountPath: /tmp/docker-mailserver/postfix-main.cf
              readOnly: true
            - name: data
              mountPath: /var/mail
              subPath: data
            - name: data
              mountPath: /var/mail-state
              subPath: state
            - name: public-dir-pipe-folder
              mountPath: /var/mail-state/spool-postfix/public
              subPath: public
            - name: private-dir-pipe-folder
              mountPath: /var/mail-state/spool-postfix/private
              subPath: public
            - name: data
              mountPath: /var/log/mail
              subPath: log
            - name: tls
              readOnly: true
              mountPath: /tmp/ssl            
          ports:
            - name: smtp
              containerPort: 25
              protocol: TCP
            - name: smtp-secure
              containerPort: 465
              protocol: TCP
            - name: smtp-auth
              containerPort: 587
            - name: imap
              containerPort: 143
              protocol: TCP
            - name: imap-secure
              containerPort: 993
              protocol: TCP
      volumes:
        - name: config
          configMap:
            name: mailserver.config
        - name: data
          persistentVolumeClaim:
            claimName: mail-storage
        # Cannot create named pipes on connected storage class, must be in. Risk of loosing data.
        - name: public-dir-pipe-folder
          emptyDir: {}
        # Cannot create named pipes on connected storage class, must be in. Risk of loosing data.
        - name: private-dir-pipe-folder
          emptyDir: {}
        - name: tls
          secret:
            secretName: mailserver-tls-secret 
            defaultMode: 256
